// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bars Grouped using SVG should render correctly 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-plot grouped-bar"
      clip-path="url(#clip-path-test)"
    >
      <g>
        <rect
          aria-label="x: 5"
          class="bar"
          height="23"
          role="img"
          style="fill: #99c1dc; opacity: 0.7;"
          tabindex="0"
          width="0"
          x="0"
          y="2"
        />
        <rect
          aria-label="x2: 8"
          class="bar"
          height="23"
          role="img"
          style="fill: #fc998e; opacity: 0.7;"
          tabindex="-1"
          width="0"
          x="0"
          y="26"
        />
      </g>
      <g>
        <rect
          aria-label="x: 10"
          class="bar"
          height="23"
          role="img"
          style="fill: #99c1dc; opacity: 0.7;"
          tabindex="0"
          width="0"
          x="0"
          y="52"
        />
        <rect
          aria-label="x2: 12"
          class="bar"
          height="23"
          role="img"
          style="fill: #fc998e; opacity: 0.7;"
          tabindex="-1"
          width="0"
          x="0"
          y="76"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`Bars Stacked using SVG should render correctly 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-plot stacked-bar"
      clip-path="url(#clip-path-test)"
    >
      <g>
        <rect
          aria-label="x: 5"
          class="bar"
          height="50"
          role="img"
          style="fill: #99c1dc; opacity: 0.7;"
          tabindex="0"
          width="0"
          x="0"
          y="0"
        />
        <rect
          aria-label="x: 10"
          class="bar"
          height="50"
          role="img"
          style="fill: #99c1dc; opacity: 0.7;"
          tabindex="-1"
          width="0"
          x="0"
          y="50"
        />
      </g>
      <g>
        <rect
          aria-label="x2: 8"
          class="bar"
          height="50"
          role="img"
          style="fill: #fc998e; opacity: 0.7;"
          tabindex="0"
          width="0"
          x="0"
          y="0"
        />
        <rect
          aria-label="x2: 12"
          class="bar"
          height="50"
          role="img"
          style="fill: #fc998e; opacity: 0.7;"
          tabindex="-1"
          width="0"
          x="0"
          y="50"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;
